--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,3 +39,4 @@ nav:
   - Modules:
       - "Module 1: Intro to the Web & HTML": module-01-intro-html/index.md
       - "Module 2: Intro to CSS": module-02-intro-css/index.md
+      - "Module 3: HTML Advanced & Media Embedding": module-03-advanced-html/index.md
