--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,3 +40,4 @@ nav:
       - "Module 1: Intro to the Web & HTML": module-01-intro-html/index.md
       - "Module 2: Intro to CSS": module-02-intro-css/index.md
       - "Module 3: HTML Advanced & Media Embedding": module-03-advanced-html/index.md
+      - "Module 4: CSS Layouts and Positioning": module-04-css-layouts-and-positioning/index.md
