--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,9 @@ nav:
   - Home: index.md
   - Syllabus: syllabus.md
   - Modules:
-      - "Module 1: Intro to the Web & HTML": module-01-intro-html/index.md
-      - "Module 2: Intro to CSS": module-02-intro-css/index.md
-      - "Module 3: HTML Advanced & Media Embedding": module-03-advanced-html/index.md
-      - "Module 4: CSS Layouts and Positioning": module-04-css-layouts-and-positioning/index.md
-      - "Module 5:  Responsive Design & Media Queries": module-05-responsive-design/index.md
+      - "Module 01: Intro to the Web & HTML": module-01-intro-html/index.md
+      - "Module 02: Intro to CSS": module-02-intro-css/index.md
+      - "Module 03: HTML Advanced & Media Embedding": module-03-advanced-html/index.md
+      - "Module 04: CSS Layouts and Positioning": module-04-css-layouts-and-positioning/index.md
+      - "Module 05: Responsive Design & Media Queries": module-05-responsive-design/index.md
+      - "Module 06: JavaScript Fundamentals": module-06-javascript_fundamentals/index.md
