module 7 link fixed

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,4 +43,4 @@ nav:
       - "Module 04: CSS Layouts and Positioning": module-04-css-layouts-and-positioning/index.md
       - "Module 05: Responsive Design & Media Queries": module-05-responsive-design/index.md
       - "Module 06: JavaScript Fundamentals": module-06-javascript_fundamentals/index.md
-      - "Module 07: JavaScript & the Browser": module-07-javascript_browser\index.md
+      - "Module 07: JavaScript & the Browser": module-07-javascript_browser/index.md
