--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,3 +44,4 @@ nav:
       - "Module 05: Responsive Design & Media Queries": module-05-responsive-design/index.md
       - "Module 06: JavaScript Fundamentals": module-06-javascript_fundamentals/index.md
       - "Module 07: JavaScript & the Browser": module-07-javascript_browser/index.md
+      - "Module 08: Introduction to Node.js": module-08-introduction_to_nodejs/index.md
