--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,3 +46,5 @@ nav:
       - "Module 07: JavaScript & the Browser": module-07-javascript_browser/index.md
       - "Module 08: Introduction to Node.js": module-08-introduction_to_nodejs/index.md
       - "Module 09: Web Servers with Node.js and Express": module-09-webserver_express/index.md
+      - "Module 10: Templating and Forms with Express": module-10-templating_forms/index.md
+      
