--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,5 +48,6 @@ nav:
       - "Module 09: Web Servers with Node.js and Express": module-09-webserver_express/index.md
       - "Module 10: Templating and Forms with Express": module-10-templating_forms/index.md
       - "Module 11: Working with Data": module-11-working-with-data/index.md
+      - "Module 12: State Management and Authentication": module-12-state-management-and-authentication/index.md
 
       
